--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "connect-redis": "^9.0.0",
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
     "joi": "^17.13.3",
     "pg": "^8.16.3",
+    "redis": "^5.8.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
