--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT}:5432
     environment:      
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -17,7 +17,7 @@ services:
     volumes:
       - redis:/data
     ports:
-      - 6379:6379
+      - ${REDIS_PORT}:6379
 
 volumes:
   redis: 
