--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "docker:int": "docker compose -p rate-wise-int --env-file .env.int up -d",
-    "test:int": "npm run docker:int && NODE_ENV=integration node --env-file=.env.int node_modules/jest/bin/jest.js --config testing/integration/config/jest.config.ts"
+    "test:int": "npm run docker:int && NODE_ENV=integration node node_modules/jest/bin/jest.js --config testing/integration/config/jest.config.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
