--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,5 @@
 services:
-  postgres-db:
+  postgres:
     image: postgres:17.5-alpine
     restart: always        
     volumes:
@@ -10,14 +10,42 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    profiles:
+      - dev
 
-  redis-db:
+  redis:
     image: redis:8.0-alpine
     restart: always
     volumes:
       - redis:/data
     ports:
       - ${REDIS_PORT}:6379
+    profiles:
+      - dev
+
+  postgres-test:
+    image: postgres:17.5-alpine
+    restart: always        
+    tmpfs: /var/lib/postgresql/data
+    ports:
+      - ${POSTGRES_PORT}:5432
+    environment:      
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    profiles:
+      - int
+
+  redis-test:
+    image: redis:8.0-alpine
+    command: redis-server --appendonly no --save ""
+    restart: always
+    tmpfs:
+    - /data
+    ports:
+      - ${REDIS_PORT}:6379
+    profiles:
+      - int
 
 volumes:
   redis: 
