--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,7 @@ services:
     image: redis:8.0-alpine
     command: redis-server --appendonly no --save ""
     restart: always
-    tmpfs:
-    - /data
+    tmpfs: /data
     ports:
       - ${REDIS_PORT}:6379
     profiles:
