--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "connect-redis": "^9.0.0",
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
+    "graphql-fields": "^2.0.3",
     "joi": "^17.13.3",
     "pg": "^8.16.3",
     "redis": "^5.8.0",
@@ -55,6 +56,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
+    "@types/graphql-fields": "^1.3.9",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
