--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "graphql": "^16.11.0",
     "graphql-fields": "^2.0.3",
     "joi": "^17.13.3",
+    "nest-winston": "^1.10.2",
     "pg": "^8.16.3",
     "redis": "^5.8.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
