--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "connect-redis": "^9.0.0",
+    "dotenv-expand": "^12.0.2",
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
     "graphql-fields": "^2.0.3",
