--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "docker:dev": "docker compose --env-file .env.dev --profile dev up -d",
     "test:int": "NODE_ENV=integration node --env-file=.env.int node_modules/jest/bin/jest.js --config testing/integration/config/jest.config.ts",    
-    "dev:migration:generate": "npm run build && npx typeorm -d dist/db/development/data-source.js migration:generate"
+    "migration:generate": "npm run build && node scripts/generate-migration.js"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
