--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "graphql-fields": "^2.0.3",
     "joi": "^17.13.3",
     "nest-winston": "^1.10.2",
+    "nestjs-cls": "^6.0.1",
     "pg": "^8.16.3",
     "redis": "^5.8.0",
     "reflect-metadata": "^0.2.2",
