--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/graphql-fields": "^1.3.9",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
     "docker-compose": "^1.2.0",
     "eslint": "^9.18.0",
