--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -16,11 +16,12 @@ services:
       - postgres
       - redis
       - mailpit      
+      - migrate
     environment:
       PORT: ${PORT:-3000}
       PASSWORD_SALT_ROUNDS: ${PASSWORD_SALT_ROUNDS:-3}
-      POSTGRES_URI: postgresql://dev:dev123@postgres:${POSTGRES_PORT:-5432}/ratewise_dev
-      REDIS_URI: redis://redis:${REDIS_PORT:-6379}
+      POSTGRES_URI: postgresql://dev:dev123@postgres:5432/ratewise_dev
+      REDIS_URI: redis://redis:6379
       SESS_COOKIE_SECRET: ${SESS_COOKIE_SECRET:-secret123}
       SESS_COOKIE_MAX_AGE_MS: ${SESS_COOKIE_MAX_AGE_MS:-600000}
       SESS_COOKIE_NAME: ${SESS_COOKIE_NAME:-ssid}
@@ -29,6 +30,20 @@ services:
       SMTP_PORT: ${SMTP_PORT:-1025}
       SMTP_USER: ${SMTP_USER:-dev}
       SMTP_PASS: ${SMTP_PASS:-devPass}
+
+  migrate:
+    container_name: migrate
+    restart: "no"
+    build:
+      context: ..
+      target: development
+    volumes:
+      - ../db:/usr/src/app/db
+    command: sh -c "npx nest build && npx typeorm -d dist/db/data-source.js migration:run"
+    environment:
+      POSTGRES_URI: postgresql://dev:dev123@postgres:5432/ratewise_dev
+    depends_on:
+    - postgres
 
   postgres:    
     container_name: postgres
