--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@testcontainers/postgresql": "^11.5.1",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
     "@types/graphql-fields": "^1.3.9",
