--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -23,8 +23,8 @@ services:
     environment:
       PORT: ${PORT:-3000}
       PASSWORD_SALT_ROUNDS: ${PASSWORD_SALT_ROUNDS:-3}
-      POSTGRES_URI: postgresql://dev:dev123@postgres:5432/ratewise_dev
-      REDIS_URI: redis://redis:6379
+      POSTGRES_URI: ${POSTGRES_URI:-postgresql://dev:dev123@postgres:5432/ratewise_dev}
+      REDIS_URI: ${REDIS_URI:-redis://redis:6379}
       SESS_COOKIE_SECRET: ${SESS_COOKIE_SECRET:-secret123}
       SESS_COOKIE_MAX_AGE_MS: ${SESS_COOKIE_MAX_AGE_MS:-600000}
       SESS_COOKIE_NAME: ${SESS_COOKIE_NAME:-ssid}
