--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "touch .env.dev && docker compose --env-file .env.dev -f docker/dev.compose.yml up --attach migrate --attach app",
+    "integration": "touch .env.int && NODE_ENV=integration node --env-file .env.int node_modules/jest/bin/jest.js --config testing/integration/config/jest.config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -20,7 +21,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "docker:dev": "docker compose --env-file .env.dev --profile dev up -d",
-    "test:int": "node_modules/jest/bin/jest.js --config testing/integration/config/jest.config.ts",
     "migration:generate": "docker compose -f docker/dev.compose.yml exec app node scripts/generate-migration.js",
     "dev:migration:run": "docker compose -f docker/dev.compose.yml run --rm migrate",
     "dev:migration:revert": "docker compose -f docker/dev.compose.yml exec app npx typeorm -d dist/db/data-source.js migration:revert"
