--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
+    "axios": "^1.11.0",
     "docker-compose": "^1.2.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
