chore(docker): add image name in dev compose

--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: ..
       target: development
+    image: ratewise:dev
     ports:
       - ${SERVER_PORT:-3000}:3000
     volumes:
