chore(docker): use the same image in migrate service

--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -7,9 +7,10 @@ services:
     image: postgres:17.5-alpine          
   migrate:        
     restart: "no"
-    command: sh -c "npx nest build && npx typeorm -d dist/db/data-source.js migration:run"    
     build:
       context: ..
       target: development
+    image: ratewise:dev
+    command: sh -c "npx nest build && npx typeorm -d dist/db/data-source.js migration:run"    
     volumes:
       - ../db:/usr/src/app/db
