--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -1,4 +1,5 @@
 name: 'rate-wise'
+
 services:
   app:    
     container_name: app
@@ -12,27 +13,21 @@ services:
     volumes:
       - ../src:/usr/src/app/src
       - ../logs:/usr/src/app/logs
-      - ../tsconfig.json:/usr/src/app/tsconfig.json
-      # Needed to generate and revert migrations inside the container
+      - ../tsconfig.json:/usr/src/app/tsconfig.json      
       - ../db:/usr/src/app/db      
       - ../scripts:/usr/src/app/scripts
     depends_on:      
       - redis
       - mailpit      
       - migrate
-    environment:
-      PORT: ${PORT:-3000}
-      PASSWORD_SALT_ROUNDS: ${PASSWORD_SALT_ROUNDS:-3}
-      POSTGRES_URI: ${POSTGRES_URI:-postgresql://dev:dev123@postgres:5432/ratewise_dev}
-      REDIS_URI: ${REDIS_URI:-redis://redis:6379}
-      SESS_COOKIE_SECRET: ${SESS_COOKIE_SECRET:-secret123}
-      SESS_COOKIE_MAX_AGE_MS: ${SESS_COOKIE_MAX_AGE_MS:-600000}
-      SESS_COOKIE_NAME: ${SESS_COOKIE_NAME:-ssid}
-      MAX_USER_SESSIONS: ${MAX_USER_SESSIONS:-3}
-      SMTP_HOST: ${SMTP_HOST:-mailpit}
-      SMTP_PORT: ${SMTP_PORT:-1025}
-      SMTP_USER: ${SMTP_USER:-dev}
-      SMTP_PASS: ${SMTP_PASS:-devPass}
+    environment:      
+      POSTGRES_URI: postgresql://dev:dev123@postgres:5432/ratewise_dev
+      REDIS_URI: redis://redis:6379
+    env_file:
+      - path: ../default.env
+        required: true 
+      - path: ../dev.env
+        required: false            
 
   migrate:
     container_name: migrate
