--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "docker compose -f docker/dev.compose.yml up --attach migrate --attach app",
-    "integration": "touch .env.int && NODE_ENV=integration node --env-file .env.int node_modules/jest/bin/jest.js --config testing/integration/config/jest.config.ts",
+    "integration": "jest --config testing/integration/config/jest.config.ts",
     "e2e": "touch .env.e2e && node --env-file .env.e2e node_modules/jest/bin/jest.js --config testing/e2e/config/jest.config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
