--- a/docker/e2e.compose.yml
+++ b/docker/e2e.compose.yml
@@ -14,19 +14,14 @@ services:
         condition: service_completed_successfully
       redis:
         condition: service_started
-    environment:
-      PORT: ${PORT:-3000}
-      PASSWORD_SALT_ROUNDS: ${PASSWORD_SALT_ROUNDS:-7}
-      POSTGRES_URI: ${POSTGRES_URI:-postgresql://test:testPass@postgres:5432/ratewise_e2e}
-      REDIS_URI: ${REDIS_URI:-redis://redis:6379}
-      SESS_COOKIE_SECRET: ${SESS_COOKIE_SECRET:-secret123}
-      SESS_COOKIE_MAX_AGE_MS: ${SESS_COOKIE_MAX_AGE_MS:-600000}
-      SESS_COOKIE_NAME: ${SESS_COOKIE_NAME:-ssid}
-      MAX_USER_SESSIONS: ${MAX_USER_SESSIONS:-3}
-      SMTP_HOST: ${SMTP_HOST:-mailpit}
-      SMTP_PORT: ${SMTP_PORT:-1025}
-      SMTP_USER: ${SMTP_USER:-dev}
-      SMTP_PASS: ${SMTP_PASS:-devPass}  
+    environment:      
+      POSTGRES_URI: postgresql://test:testPass@postgres:5432/ratewise_e2e
+      REDIS_URI: redis://redis:6379
+    env_file:
+      - path: ../.env.defaults
+        required: true 
+      - path: ../.env.e2e
+        required: false       
 
   migrate:    
     container_name: migrate-e2e
