--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "docker compose -f docker/dev.compose.yml up --attach migrate --attach app",
     "integration": "jest --config testing/integration/config/jest.config.ts",
-    "e2e": "touch .env.e2e && node --env-file .env.e2e node_modules/jest/bin/jest.js --config testing/e2e/config/jest.config.ts",
+    "e2e": "jest --config testing/e2e/config/jest.config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
