--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "docker compose -f docker/dev.compose.yml up --attach migrate --attach app",
-    "integration": "jest --config testing/integration/config/jest.config.ts",
+    "int": "jest --config testing/integration/config/jest.config.ts",
     "e2e": "jest --config testing/e2e/config/jest.config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
