chore(testing): add utils to create graphql operations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
       "@integration/*": [
         "testing/integration/*"
       ],
-      "@queries/*": [
-        "testing/queries/*"
+      "@test-utils/*": [
+        "testing/utils/*"
       ]
     },
     "strict": true,
