--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=22.16.0"
+  },
   "scripts": {
     "dev": "docker compose -f docker/dev.compose.yml up --attach migrate --attach app",
     "int": "jest --config testing/integration/config/jest.config.ts",
