--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -37,14 +37,12 @@ services:
     ports:
       - ${POSTGRES_PORT:-5432}:5432    
 
-  redis:        
+  redis_auth:        
     extends: 
       file: ./compose.yml
-      service: redis   
+      service: redis_auth
     volumes:
-      - redis:/data      
-    ports:
-      - ${REDIS_PORT:-6379}:6379    
+      - redis_auth:/data
 
   mailpit:        
     extends: 
@@ -57,8 +55,8 @@ services:
         - "${MAILHOG_UI_PORT:-8025}:8025"
 
 volumes:
-  redis: 
-    name: rate-wise-redis
+  redis_auth: 
+    name: rate-wise-redis-auth
     external: false
   postgres:
     name: rate-wise-postgres
