--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@redis/client": "^5.8.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -50,7 +51,6 @@
     "nestjs-cls": "^6.0.1",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
-    "redis": "^5.8.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26",
