--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
     "graphql-fields": "^2.0.3",
+    "ioredis": "^5.7.0",
     "joi": "^17.13.3",
     "nestjs-cls": "^6.0.1",
     "nodemailer": "^7.0.5",
@@ -72,7 +73,7 @@
     "@types/express-session": "^1.18.2",
     "@types/graphql-fields": "^1.3.9",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.18.5",
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
     "axios": "^1.11.0",
