--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@redis/client": "^5.8.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -46,7 +47,6 @@
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
     "graphql-fields": "^2.0.3",
-    "ioredis": "^5.7.0",
     "joi": "^17.13.3",
     "nestjs-cls": "^6.0.1",
     "nodemailer": "^7.0.5",
