fix(tsconfig): include only src/ and db/ in root tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
+  "include": [
+    "src/**/*",
+    "db/**/*"
+  ],
   "compilerOptions": {
     "paths": {
       "@integration/*": [
         "testing/integration/*"
-      ],
-      "@unit/*": [
-        "testing/unit/*"
       ],
       "@test-utils/*": [
         "testing/utils/*"
