chore(tokens): add email token config defaults in .env.defaults

--- a/.env.defaults
+++ b/.env.defaults
@@ -4,6 +4,8 @@ PASSWORD_SALT_ROUNDS=7
 SESS_COOKIE_SECRET=secretABC
 SESS_COOKIE_MAX_AGE_MS=600000
 SESS_COOKIE_NAME=ssid
+EMAIL_AUTH_TOKEN_SECRET='ABCDEFGHIJK'
+EMAIL_AUTH_TOKEN_EXP='5m'
 MAX_USER_SESSIONS=3
 SMTP_HOST=mailpit
 SMTP_PORT=1025
