--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -2,9 +2,9 @@ name: 'rate-wise'
 
 services:
   app:        
-    extends:
-      file: ./compose.yml
-      service: app
+    restart: always
+    pull_policy: never
+    init: true
     build:
       context: ..
       target: development
@@ -17,6 +17,21 @@ services:
       - ../tsconfig.json:/usr/src/app/tsconfig.json      
       - ../db:/usr/src/app/db      
       - ../scripts:/usr/src/app/scripts
+    depends_on:      
+      migrate:
+        condition: service_completed_successfully          
+      redis_auth:
+        condition: service_started    
+      mailpit:
+        condition: service_started      
+    environment:      
+      POSTGRES_URI: postgresql://dev:secretpassword@postgres:5432/ratewise   
+      REDIS_AUTH_URI: redis://redis_auth:6379
+      REDIS_QUEUES_URI: redis://redis_queues:6378
+      SMTP_HOST: mailpit
+      SMTP_PORT: 1025
+      SMTP_USER: dev
+      SMTP_PASS: devPass      
     env_file:
       - path: ../.env.defaults
         required: true 
@@ -24,18 +39,38 @@ services:
         required: false            
 
   migrate:    
-    extends:
-      file: ./compose.yml
-      service: migrate
+    restart: "no"
+    image: ratewise:migrate 
+    pull_policy: never
+    build:
+      context: ..
+      target: development   
+    command: sh -c "npx nest build && npx typeorm -d dist/db/data-source.js migration:run"    
+    volumes:
+      - ../db:/usr/src/app/db
+    depends_on:
+      postgres:
+        condition: service_healthy  
+    environment:
+      POSTGRES_URI: postgresql://dev:secretpassword@postgres:5432/ratewise   
 
   postgres:        
-    extends: 
-      file: ./compose.yml
-      service: postgres        
+    image: postgres:17.5-alpine          
+    restart: always
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
       - ${POSTGRES_PORT:-5432}:5432    
+    environment:      
+      POSTGRES_USER: dev
+      POSTGRES_PASSWORD: secretpassword
+      POSTGRES_DB: ratewise      
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U dev -d ratewise"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s           
 
   redisinsight:
     image: redis/redisinsight:2.70
@@ -46,32 +81,40 @@ services:
       - ${REDIS_INSIGHT-5540}:5540  
   
   redis_auth:        
-    extends: 
-      file: ./compose.yml
-      service: redis_auth
+    image: redis:8.0-alpine    
+    restart: always
+    ports: 
+      - 6379
     command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
     volumes:    
       - redis_auth:/data
       - ../redis/redis-auth.conf:/usr/local/etc/redis/redis.conf
 
   redis_queues:        
-    extends: 
-      file: ./compose.yml
-      service: redis_queues
+    image: redis:8.0-alpine    
+    restart: always
+    ports: 
+      - 6378  
     command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--port", "6378"]
     volumes:    
       - redis_queues:/data
       - ../redis/redis-queues.conf:/usr/local/etc/redis/redis.conf      
 
   mailpit:        
-    extends: 
-      file: ./compose.yml
-      service: mailpit    
-    volumes:
-        - mailpit:/data
+    image: axllent/mailpit:v1.27.6     
+    restart: always
     ports:
         - "${MAILHOG_SMTP_PORT:-1025}:1025"
-        - "${MAILHOG_UI_PORT:-8025}:8025"
+        - "${MAILHOG_UI_PORT:-8025}:8025"    
+    volumes:
+        - mailpit:/data    
+    environment:
+      # https://mailpit.axllent.org/docs/configuration/runtime-options/
+      MP_MAX_MESSAGES: 5000
+      MP_DATABASE: /data/mailpit.db
+      MP_SMTP_AUTH_ACCEPT_ANY: 1
+      MP_SMTP_AUTH_ALLOW_INSECURE: 1   
+      MP_SEND_API_AUTH_ACCEPT_ANY: 1    
 
 volumes:
   redisinsight:
