--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "docker compose -f docker/dev.compose.yml up --attach migrate --attach app",
-    "int": "jest --config testing/integration/jest.config.ts",
+    "test:integration": "jest --config testing/integration/jest.config.ts",
     "test:components": "jest --config testing/components/jest.config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
