--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,7 +3,9 @@ on:
   pull_request:
     branches:
       - development
-      - "github-actions/lint"
+  push:
+    branches:
+      - "github-actions/lint"    
 
 jobs:
   run-linters:
