--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,5 +33,5 @@ jobs:
         with:
           eslint: true
           eslint_auto_fix: false
-          eslint_args: "\"{src,apps,libs,test}/**/*.ts\" --fix"
+          eslint_args: "\"{src,apps,libs,test}/**/*.ts\" --max-warnings 0"
           # prettier: true
