--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: 22.19.0
+          cache: 'npm'
       
       - name: Install Node.js dependencies
         run: npm ci
@@ -31,6 +32,7 @@ jobs:
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
+          continue_on_error: false
           eslint: true
           eslint_auto_fix: false
           eslint_args: "\"{src,apps,libs,test}/**/*.ts\" --max-warnings 0"
