--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -3,19 +3,31 @@ on:
   pull_request:
     branches:
       - development
+
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true        
+
 jobs: 
-  integration:
+  call-linter:
+    uses: ./.github/workflows/lint.yml
+
+  run-integration-tests:    
+    needs: call-linter
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - name: Check out Git repository
+        uses: actions/checkout@v5
+
       - name: Use Node.js
         uses: actions/setup-node@v6
         with:
           node-version: '22.19.0'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run test:integration     
+
+      - name: Install Node.js dependencies
+        run: npm ci
+
+      - name: Run Integration tests
+        run: npm run test:integration     
     
