--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,11 +1,10 @@
 name: Lint
 on:  
-  pull_request:
-    branches:
-      - development
-  push:
-    branches:
-      - "github-actions/lint"    
+  workflow_call:
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true            
 
 permissions:
   checks: write
@@ -15,7 +14,6 @@ jobs:
   run-linters:
     name: Run linters
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v5
