--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,21 +1,31 @@
-name: Integration Tests
+name: Integration
+
 on:
   pull_request:
     branches:
       - development
+
 concurrency:
-  group: ci-${{ github.ref }}
+  group: integration-${{ github.ref }}
   cancel-in-progress: true        
+
 jobs: 
-  integration:
+  run-tests:
+    name: Integration tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - name: Use Node.js
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
           node-version: '22.19.0'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run test:integration     
+
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Run integration tests
+        run: npm run test:integration     
     
