--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,8 @@ jobs:
         with:
           continue_on_error: false
           eslint: true
-          eslint_auto_fix: false
+          eslint_auto_fix: true
+          commit_message: "style: fix eslint/prettier issues"
           eslint_args: "\"{src,apps,libs,test}/**/*.ts\" --max-warnings 0"    
 
   run-integration-tests:
