--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@redis/client": "^5.8.2",
     "bcrypt": "^6.0.0",
