--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
@@ -52,6 +53,7 @@
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
     "graphql-fields": "^2.0.3",
+    "ioredis": "^5.8.2",
     "joi": "^17.13.3",
     "nestjs-cls": "^6.0.1",
     "nodemailer": "^7.0.5",
