feat(ci): add unit tests in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,24 @@ jobs:
           eslint: true
           eslint_auto_fix: true
           commit_message: "style: fix eslint/prettier issues"
-          eslint_args: "\"{src,apps,libs,test}/**/*.ts\" --max-warnings 0"    
+          eslint_args: "\"{src,apps,libs,test}/**/*.ts\" --max-warnings 0"  
+          
+  run-unit-tests:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    needs: run-linter
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: 22.19.0
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
+      - name: Run unit tests
+        run: npm run test:unit -- --maxWorkers=100%
 
   run-integration-tests:
     name: Integration Tests
