--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "scripts": {
     "dev": "docker compose -f docker/dev.compose.yml up --attach migrate --attach app",
-    "test:integration": "jest --config testing/integration/jest.config.ts",
-    "test:components": "jest --config testing/components/jest.config.ts",
+    "test:unit": "jest --config testing/jest-configs/jest.unit.config.ts",
+    "test:integration": "jest --config testing/jest-configs/jest.integration.config.ts",
+    "test:components": "jest --config testing/jest-configs/jest.components.config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -19,7 +20,6 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test:unit": "jest --config testing/unit/jest.config.ts",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
