fix(docker): add SERVER_PORT environment variable to app service

--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -33,7 +33,8 @@ services:
       SMTP_HOST: mailpit
       SMTP_PORT: 1025
       SMTP_USER: dev
-      SMTP_PASS: devPass      
+      SMTP_PASS: devPass
+      SERVER_PORT: ${SERVER_PORT:-3000} # For printing the ApolloServer url
     env_file:
       - path: ../.env.defaults
         required: true 
