--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "@keyv/redis": "^5.1.3",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/bullmq": "^11.0.4",
