--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "graphql-fields": "^2.0.3",
     "ioredis": "^5.8.2",
     "joi": "^17.13.3",
+    "ms": "^2.1.3",
     "nestjs-cls": "^6.0.1",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
@@ -84,6 +85,7 @@
     "@types/express-session": "^1.18.2",
     "@types/graphql-fields": "^1.3.9",
     "@types/jest": "^29.5.14",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.18.5",
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
