--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0",
     "prettier": "^3.4.2",
+    "redis-memory-server": "^0.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "testcontainers": "^11.5.1",
