fix(docker): update migrate service images to use "atewise:migrate"

--- a/docker/dev.compose.yml
+++ b/docker/dev.compose.yml
@@ -44,7 +44,7 @@ services:
 
   migrate:    
     restart: "no"
-    image: ratewise:dev
+    image: ratewise:migrate
     pull_policy: never
     build:
       context: ..
@@ -60,7 +60,7 @@ services:
 
   revert-migrate:    
     restart: "no"
-    image: ratewise:dev
+    image: ratewise:migrate
     pull_policy: never
     build:
       context: ..
