--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run unit tests
-        run: npm run test:unit -- --maxWorkers=100%
+        run: npm run test:unit -- --maxWorkers=100% --coverage=false
 
   run-integration-tests:
     name: Integration Tests
@@ -67,7 +67,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run integration tests
-        run: npm run test:integration -- --maxWorkers=100%
+        run: npm run test:integration -- --maxWorkers=100% --coverage=false
 
   run-components-tests:
     name: Components Tests
@@ -86,5 +86,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run components tests
-        run: npm run test:components -- --maxWorkers=100%
+        run: npm run test:components -- --maxWorkers=100% --coverage=false
     
