--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": "22.21.1"
   },
   "scripts": {
-    "dev": "docker compose -f docker/dev.compose.yml up --attach migrate --attach app",
+    "dev": "docker compose -f docker/base.compose.yml -f docker/dev.compose.yml up --attach migrate --attach app",
+    "e2e": "docker compose -f docker/base.compose.yml -f docker/e2e.compose.yml up --attach app",
     "test:unit": "jest --config testing/jest-configs/jest.unit.config.ts",
     "test:integration": "jest --config testing/jest-configs/jest.integration.config.ts",
     "test:components": "jest --config testing/jest-configs/jest.components.config.ts",
