feat(package): install axios-cookiejar-support and tough-cookie. And define new e2e command

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "dev": "docker compose -f docker/base.compose.yml -f docker/dev.compose.yml up --attach migrate --attach app",
     "e2e": "docker compose -f docker/base.compose.yml -f docker/e2e.compose.yml up --attach app --build",
     "test:unit": "jest --config testing/jest-configs/jest.unit.config.ts",
-    "test:integration": "jest --config testing/jest-configs/jest.integration.config.ts",
     "test:components": "jest --config testing/jest-configs/jest.components.config.ts",
+    "test:integration": "jest --config testing/jest-configs/jest.integration.config.ts",
+    "test:e2e": "jest --config testing/jest-configs/jest.e2e.config.ts",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
@@ -23,7 +24,6 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "docker:dev": "docker compose --env-file .env.dev --profile dev up -d",
     "migration:generate": "docker compose -f docker/dev.compose.yml exec app node scripts/generate-migration.js",
     "dev:migration:run": "docker compose -f docker/dev.compose.yml run --rm migrate",
@@ -91,6 +91,7 @@
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
     "axios": "^1.13.2",
+    "axios-cookiejar-support": "^6.0.5",
     "docker-compose": "^1.2.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -103,6 +104,7 @@
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "testcontainers": "^11.5.1",
+    "tough-cookie": "^6.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
